--- a/MadSpildProjekt/src/main/resources/templates/EmptyFridge.html
+++ b/MadSpildProjekt/src/main/resources/templates/EmptyFridge.html
@@ -57,32 +57,32 @@
             {"name" : "recipe1",
                 "image" : "/images/1.png",
                 "ingredients" : ["Avocado", "Tomat"],
-                "url" : "https://www.google.dk"
+                "url" : "https://mitkokkeri.dk/opskrifter/avocado-tomatsalat/"
             },
             {"name" : "recipe2",
                 "image" : "/images/2.png",
                 "ingredients" : ["Blåbær"],
-                "url" : "https://www.google.dk"
+                "url" : "https://www.arla.dk/opskrifter/amerikanske-pandekager/"
             },
             {"name" : "recipe3",
                 "image" : "/images/3.png",
                 "ingredients" : ["Laks", "Salat", "Tomat"],
-                "url" : "https://www.google.dk"
+                "url" : "https://opskrifter.coop.dk/opskrifter/stegt-laks-med-groent-og-groen-gudinde-dressing-10348"
             },
             {"name" : "recipe4",
                 "image" : "/images/4.png",
                 "ingredients" : ["Tomat"],
-                "url" : "https://www.google.dk"
+                "url" : "https://www.valdemarsro.dk/grillet-groentsagssuppe/"
             },
             {"name" : "recipe5",
                 "image" : "/images/5.png",
                 "ingredients" : ["Avocado", "Salat"],
-                "url" : "https://www.google.dk"
+                "url" : "https://www.arla.dk/opskrifter/smorrebrod/"
             },
             {"name" : "recipe6",
                 "image" : "/images/6.png",
                 "ingredients" : ["Avocado", "Salat", "Tomat"],
-                "url" : "https://www.google.dk"
+                "url" : "https://www.valdemarsro.dk/melonsalat-opskrift/"
             }
         ];
 
