--- a/MadSpildProjekt/src/main/resources/templates/EmptyFridge.html
+++ b/MadSpildProjekt/src/main/resources/templates/EmptyFridge.html
@@ -51,37 +51,38 @@
 </div>
 
 <script>
-    var presetIngredients = ['Kylling','Tomat','Blåbær','Avocado','Laks','Salat'];
+    var presetIngredients = ['Melon','Tomat','Blåbær','Avocado','Laks','Salat','Agurk',
+        'Løg','Æg', 'Mel', 'Mælk', 'Broccoli', 'Peberfrugt', 'Hvidløg', 'Rugbrød', 'Flæskesteg'];
 
     var recipes = [
             {"name" : "recipe1",
                 "image" : "/images/1.png",
-                "ingredients" : ["Avocado", "Tomat"],
+                "ingredients" : ["Avocado", "Tomat", "Agurk", "Løg"],
                 "url" : "https://mitkokkeri.dk/opskrifter/avocado-tomatsalat/"
             },
             {"name" : "recipe2",
                 "image" : "/images/2.png",
-                "ingredients" : ["Blåbær"],
+                "ingredients" : ["Blåbær", "Æg", "Mel", "Mælk"],
                 "url" : "https://www.arla.dk/opskrifter/amerikanske-pandekager/"
             },
             {"name" : "recipe3",
                 "image" : "/images/3.png",
-                "ingredients" : ["Laks", "Salat", "Tomat"],
+                "ingredients" : ["Laks", "Salat", "Tomat", "Broccoli", "Løg"],
                 "url" : "https://opskrifter.coop.dk/opskrifter/stegt-laks-med-groent-og-groen-gudinde-dressing-10348"
             },
             {"name" : "recipe4",
                 "image" : "/images/4.png",
-                "ingredients" : ["Tomat"],
+                "ingredients" : ["Tomat", "Peberfrugt", "Hvidløg", "Løg"],
                 "url" : "https://www.valdemarsro.dk/grillet-groentsagssuppe/"
             },
             {"name" : "recipe5",
                 "image" : "/images/5.png",
-                "ingredients" : ["Avocado", "Salat"],
+                "ingredients" : ["Avocado", "Salat", "Rugbrød", "Flæskesteg", "Tomat", "Agurk"],
                 "url" : "https://www.arla.dk/opskrifter/smorrebrod/"
             },
             {"name" : "recipe6",
                 "image" : "/images/6.png",
-                "ingredients" : ["Avocado", "Salat", "Tomat"],
+                "ingredients" : ["Avocado", "Salat", "Tomat", "Blåbær", "Løg", "Melon", "Agurk"],
                 "url" : "https://www.valdemarsro.dk/melonsalat-opskrift/"
             }
         ];
