Stylet FoodBank.html

--- a/MadSpildProjekt/src/main/resources/templates/FoodBank.html
+++ b/MadSpildProjekt/src/main/resources/templates/FoodBank.html
@@ -3,7 +3,7 @@
 <head>
 
     <link rel="stylesheet" href="GlobalStylesheet.css">
-    <link rel="stylesheet " href="Foodbank.css">
+
     <link rel="stylesheet" href="footer.css">
 
     <meta charset="UTF-8">
@@ -19,9 +19,8 @@
 
 </div>
 
+<h1 style="padding-top: 30px; padding-bottom: 10px">
 
-<h1>
-<br>
 Oversigt over Foodbanks i København
 <br>
 </h1>
@@ -29,34 +28,30 @@ Oversigt over Foodbanks i København
 
 
 <div class="row">
-    <div class="column">
+    <div class="column" style="max-width: 50%; padding-left: 20px">
         <h2>
             Hvorfor skal du købe mad hos en fødevarebank?
         </h2>
         <p class="big">
 
-            I 2016 åbnede Folkekirkens Nødhjælp Wefood – Danmarks første butik, der sælger overskudvarer. Sidenhen er det blevet til fem succesfulde Wefood-butikker i København og Aarhus. I 2018 solgte de mere end 173 ton mad, som ellers var blevet smidt ud. Vi kalder det et win-win-win koncept:
+            I 2016 åbnede Folkekirkens Nødhjælp Wefood – Danmarks første butik, der sælger overskudvarer. Sidenhen er det blevet til fem succesfulde Wefood-butikker i København og Aarhus. I 2018 solgte de mere end 173 ton mad, som ellers var blevet smidt ud.
+            <br/>Vi kalder det et win-win-win koncept:
 
             Wefood mindsker madspild, du køber varer, som intet fejler <br> til en fordelagtig pris, og overskuddet går til mennesker i nød.
         </p>
-
-
-
     </div>
 
-    <div class="column"></div>
+    <br/>
 
+<div style="float: right;">
     <h2>
         Wefood på Nørrebro
     </h2>
-
-    <img src="https://wefood.noedhjaelp.dk/wp-content/uploads/2019/08/noerrebro-600x600.jpg">
-
-
+    <img src="https://wefood.noedhjaelp.dk/wp-content/uploads/2019/08/noerrebro-600x600.jpg" style="margin-right: 20px" >
 </div>
 
 
-<h2>
+<h2 style="padding-top: 500px; padding-left: 20px">
     <br>
     Find den fødevare bank der er tættest på dig.
     <br>
@@ -69,18 +64,18 @@ Oversigt over Foodbanks i København
 
 
 
-<h2>
+<h2 style="padding-left: 20px2">
 
     <br>
     I tabellen herunder finder du links til alle de butikker
-    Der tilbyder samme koncept som wefood.
+    der tilbyder samme koncept som Wefood.
     <br>
 </h2>
 
 <table id="t01" style="width:100%">
     <tr>
         <th>Nørrebro</th>
-        <th>Frederikssberg</th>
+        <th>Frederiksberg</th>
         <th>Valby</th>
         <th>Vanløse</th>
     </tr>
