--- a/MadSpildProjekt/src/main/resources/templates/FoodBank.html
+++ b/MadSpildProjekt/src/main/resources/templates/FoodBank.html
@@ -27,7 +27,7 @@ Oversigt over Foodbanks i København
 
 
 
-<div class="row">
+<div>
     <div class="column" style="max-width: 50%; padding-left: 20px">
         <h2>
             Hvorfor skal du købe mad hos en fødevarebank?
