--- a/MadSpildProjekt/src/main/resources/templates/FoodBank.html
+++ b/MadSpildProjekt/src/main/resources/templates/FoodBank.html
@@ -28,7 +28,7 @@ Oversigt over Foodbanks i København
 
 
 <div>
-    <div class="column" style="max-width: 50%; padding-left: 20px">
+    <div class="column" style="max-width: 50%; padding-left: 20px; float: left; margin-top: 20px">
         <h2>
             Hvorfor skal du købe mad hos en fødevarebank?
         </h2>
@@ -51,7 +51,7 @@ Oversigt over Foodbanks i København
 </div>
 
 
-<h2 style="padding-top: 500px; padding-left: 20px">
+<h2 style="padding-top: 230px; padding-left: 20px">
     <br>
     Find den fødevare bank der er tættest på dig.
     <br>
@@ -64,7 +64,7 @@ Oversigt over Foodbanks i København
 
 
 
-<h2 style="padding-left: 20px2">
+<h2>
 
     <br>
     I tabellen herunder finder du links til alle de butikker
